<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input_angka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/input_dua_angka" />

    <EditText
        android:id="@+id/angka_pertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/input_angka"
        />

    <EditText
        android:id="@+id/angka_kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/angka_pertama"
        />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:text="@string/string_plus"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/angka_kedua"
        />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_minus"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_plus"
        android:layout_below="@id/angka_kedua"
        />

    <Button
        android:id="@+id/btn_multiplication"
        android:layout_width="wrap_content"
        android:text="@string/string_multiplication"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/btn_division"
        android:layout_below="@id/angka_kedua"
        />

    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_division"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/angka_kedua"
        />
    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/string_clear"
        android:layout_below="@+id/btn_division"
        />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/string_hasil"
        android:layout_below="@id/btn_clear"
        />

    <TextView
        android:id="@+id/txt_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/string_angka_hasil"
        android:layout_below="@id/hasil"
        />

</RelativeLayout>